kogo/static/css/style.css
html, body, div.btn-holder {
	width: 100%;
}

body{
	background: url(../images/background.jpg) no-repeat center center fixed; 
  	-webkit-background-size: cover;
  	-moz-background-size: cover;
  	-o-background-size: cover;
  	background-size: cover;
}

html, body {
	height: 100%;
}

nav.navbar.navbar-inverse {
	margin-bottom: 0px;
}

.shadow {
	border: 1px solid LightGray;
	box-shadow: 0px 3px 11px #202020;
}

.request-shadow {
	box-shadow: 0px 2px 5px #202020;
}


button.location-btn, button.student {
	width: 300px;
	margin: 22px auto;
	font-size: 24px;
	display: block;
	padding: 20px;
}

button.location-btn.pickup {
	margin: -8px auto;
	padding: 40px;
}

h3.pickup-title, h3.dropoff-title {
	margin-left: calc(50% - 150px);
}

h3.pickup-title {
	margin-bottom: 0px;
	font-weight: bold;
}

button.back-btn {
	margin-top: 20px;
	margin-left: calc(50% - 150px);
	font-size: 16px;
	width: 86px;
}

span.glyphicon-chevron-left {
	font-size: 24px;
	cursor: pointer;
}

span.glyphicon-arrow-left strong,
div.cancel-request-holder strong {
	margin-left: 10px;
}

div.content-holder {
	height: calc(100% - 50px);
}

div.wait-background {
	background: rgb(27, 180, 27);
	margin-top: 0px;
	height: 100%;
	text-align: center;
}

div.wait-background h1{
	padding: 40px;
	color: white;
	font-size: 80px;
	margin-top: 0px;
}


div.cancel-request-holder {
	margin-top: 70px;
	text-align: center;
	width: 100%;
	font-size: 24px;
	cursor: pointer;
}

div.push-down {
	margin-bottom: 100px;
}

h2.ride-in-progress{
	margin-top: 100px;
	font-size: 50px;
}

div.cancel-request-holder span {
	color: Firebrick;
}

div.request-summary-holder {
	padding-top: 30px;
	font-size: 24px;
}

p.no-requests{
	margin: 30px;
	font-size: 22px;
}

button.start-ride, button.end-ride {
	margin-top: 100px;
	padding-top: 20px;
	padding-bottom: 20px;
	font-size: 20px;
}


/* Login Form */

input {
  display: block;
  width: 100%;
  height: 40px;
  padding: 6px 12px;
  font-size: 14px;
  line-height: 1.42857143;
  color: #555;
  background-color: #fff;
  background-image: none;
  border: 1px solid #ccc;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
}

li.error {
	color: #D00000;
}

.login-form-container {
	width: 300px;
	margin: 80px auto;
}

div.input-group-addon{
	border-radius: 5px !important;
	border: 1px solid #ccc !important;
}

ul.nav li {
	text-align: right;
	font-size: 1.2em;
}

a.new-to-kogo {
	float: right;
	font-size: 18px;
	margin-top: 10px;
}

form.new-student {
	margin: 40px auto;
	width: 300px;
}

form.new-student h3 {
	margin-bottom: 30px;
}


button.num-requests {
	position: relative;
	left: calc(50% + 91px);
	top: 30px;
	padding: 0px 20px;
	font-size: 24px;
}

div.btn-holder:last-child {
	padding-bottom: 25px;
}

